force-app/main/default/objects/EV_URL_portal__mdt/EV_URL_portal__mdt.object-meta.xml
<CustomObject>
    <description>Url utilizadas para portal</description>
    <label>EV URL portal</label>
    <pluralLabel>EV URL portal</pluralLabel>
</CustomObject>