force-app/main/default/objects/EV_URL_portal__mdt/fields/URL_param_index__c.field-meta.xml
<CustomField>
    <fullName>URL_param_index__c</fullName>
    <label>URL param index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>