force-app/main/default/objects/EV_URL_portal__mdt/fields/urlAccionistaPortal__c.field-meta.xml
<CustomField>
    <fullName>urlAccionistaPortal__c</fullName>
    <label>URL accionista portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>