force-app/main/default/objects/EV_URL_portal__mdt/fields/urlStreamingAccionistaPortal__c.field-meta.xml
<CustomField>
    <fullName>urlStreamingAccionistaPortal__c</fullName>
    <label>URL streaming accionista portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>